# ai-trading-platform

./: .gitignore  CHANGELOG.md  CLAUDE_CONTEXT.md  CLAUDE_WEB_BRIEFING.md  CODEOWNERS  CONTEXT_PROMPT_FOR_CLAUDE.md  CONTRIBUTING.md  DATA_INTEGRITY_VERIFICATION.md  EXTERNAL_DRIVE_CHAT_LOG.md  HANDOFF_2025-11-26_DataLoader.md  HANDOFF_v4_2_0_6_COMPLETE.md  HANDOFF_v5_0_0_0_MASTER.md  LOCAL_DRIVE_CHAT_LOG.md  Makefile  README.md  SECURITY.md  docker-compose.yml  package-lock.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
MQL5/: DIRECTORY_REORGANIZATION_SUMMARY.md  EA_v4_187_DUAL_ROW_UPGRADE.md  update_file_paths.py
analytics/: create_multi_asset_dashboard.py  multi_asset_validation.py  multi_dataset_correlation_analysis.py  multi_version_comparison_analysis.py  outlier_ceiling_analysis.py  time_segment_analysis.py  (+5 more)
backend/: Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/migrations/: README  env.py
backend/app/db/migrations/versions/: 0001_create_symbols.py  20250809_0001_create_symbols.py  20250809_0002_timeseries_tables.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  symbol.py
backend/app/schemas/: symbol.py
backend/app/scripts/: seed_symbols.py
backend/app/tasks/: __init__.py
backend/app/tests/: test_health.py
backend/tests/: test_db_healthcheck_sqlite.py  test_health.py  test_metrics.py  test_symbols_crud.py
(+663 files in other folders)
